--- a/src/App.scss
+++ b/src/App.scss
@@ -72,6 +72,7 @@
         color: white;
         margin-top: 15px;
         border-radius: 4px;
+        outline: none;
         cursor: pointer;
         .upload-icon {
           position: relative;
@@ -142,6 +143,7 @@
         color: white;
         margin-top: 15px;
         border-radius: 4px;
+        outline: none;
         cursor: pointer;
       }
       button:hover {
