--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -2,13 +2,97 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  // height: 100%;
   background-color: rgb(247, 247, 247);
+  margin-bottom: 20px;
   .post-container {
     display: flex;
-    width: 30%;
-    height: 200px;
+    flex-direction: column;
+    width: 27%;
     margin-top: 30px;
-    border: 1px solid rgb(182, 182, 182);
+    // background-color: rgb(202, 142, 142);
+    .post {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1px solid rgb(182, 182, 182);
+      margin-bottom: 20px;
+      // background-color: rgb(199, 125, 125);
+      .likes-container {
+        display: flex;
+        // background-color: red;
+
+        align-items: center;
+        margin-bottom: 5px;
+      }
+      .post-header {
+        display: flex;
+        width: 99%;
+        background-color: white;
+        align-items: center;
+        padding: 5px 0px 3px 3px;
+        // background-color: Red;
+        span {
+          font-size: 20px;
+          position: relative;
+          bottom: 2px;
+        }
+        img {
+          height: 37px;
+          width: 40px;
+          margin-right: 10px;
+          border-radius: 50%;
+          cursor: pointer;
+        }
+      }
+      img {
+        height: 700px;
+        width: 100%;
+      }
+      .post-footer {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        width: 100%;
+        // margin-bottom: 5px;
+        padding-bottom: 5px;
+        // background-color: rgb(206, 140, 140);
+        border-bottom: 1px solid rgb(182, 182, 182);
+        .bottom {
+          .footer-username {
+            font-weight: bold;
+            margin-right: 5px;
+          }
+        }
+      }
+      .messages-container {
+        width: 100%;
+        background-color: white;
+        padding: 10px 0px;
+        form {
+          display: flex;
+          justify-content: space-between;
+
+          input {
+            font-size: 17px;
+            margin-left: 2px;
+            border: none;
+            outline: none;
+          }
+          button {
+            position: relative;
+            bottom: 2px;
+            margin-right: 8px;
+            font-size: 16px;
+            color: rgb(80, 165, 214);
+            cursor: pointer;
+            font-weight: bold;
+            border: none;
+            background-color: white;
+            outline: none;
+          }
+        }
+      }
+    }
   }
 }
