--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,23 @@
 .App {
   flex-direction: column;
-  height: 100vh;
+  // height: 100vh;
   display: flex;
+  // display: none;
   //   background-color: Red;
+  background-color: rgb(247, 247, 247);
 
   .post-modal {
     display: flex;
     flex-direction: column;
     padding-bottom: 20px;
     width: 600px;
+    // margin-top: 100px;
+    z-index: 700;
     flex-direction: column;
     position: absolute;
     left: 50%;
     top: 20%;
-    transform: translate(-50%);
+    transform: translate(-50%) !important;
     border: 1px solid black;
     background-color: white;
     .post-header {
