--- a/src/components/backdrop/backdrop.scss
+++ b/src/components/backdrop/backdrop.scss
@@ -2,6 +2,7 @@
   position: fixed;
   height: 100vh;
   width: 100vw;
+  z-index: 200;
   cursor: pointer;
   background-color: rgba($color: black, $alpha: 0.5);
 }
