--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  // height: 100%;
+  margin-top: 50px;
   background-color: rgb(247, 247, 247);
   margin-bottom: 20px;
   .comment-container {
