--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 .navbar {
   display: flex;
+  position: fixed;
+  width: 100%;
   height: 50px;
+  z-index: 100;
   background-color: white;
   justify-content: space-evenly;
   border-bottom: 1px solid rgb(204, 204, 204);
@@ -9,6 +13,7 @@
     width: 50%;
     justify-content: flex-end;
     align-items: center;
+    font-family: "Pacifico", cursive;
     span {
       font-size: 24px;
     }
@@ -40,8 +45,8 @@
       flex-direction: column;
       position: absolute;
       background-color: white;
-      top: 48px;
-      right: 18px;
+      top: 50px;
+      right: 15px;
       padding: 0px 0px;
       border-right: 1px solid rgb(172, 172, 172);
       border-left: 1px solid rgb(172, 172, 172);
