--- a/src/components/accountfeed/accountfeed.scss
+++ b/src/components/accountfeed/accountfeed.scss
@@ -32,7 +32,20 @@
       flex-direction: column;
       //   align-items: center;
       width: 57%;
-      //   background-color: rgb(96, 96, 194);
+      // background-color: rgb(96, 96, 194);
+      .bio {
+        display: flex;
+        align-items: center;
+        // background-color: red;
+        max-width: 250px;
+        margin: 0;
+        padding: 0;
+        span {
+          margin: 0;
+          padding: 0;
+          font-size: 16px;
+        }
+      }
       button {
         width: 90px;
         margin-top: 5px;
