--- a/src/components/register/register.scss
+++ b/src/components/register/register.scss
@@ -41,6 +41,7 @@
       .header {
         display: flex;
         padding-bottom: 4px;
+        margin-bottom: 20px;
         font-size: 32px;
         color: black;
         justify-content: center;
@@ -60,7 +61,7 @@
         display: flex;
         // background-color: red;
         // height: 100%;
-        margin-top: 30px;
+        margin-top: 10px;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
