--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -32,7 +32,7 @@
       height: 65px;
       width: 35%;
       display: flex;
-      background-color: purple;
+      // background-color: purple;
       margin-right: 10px;
       img {
         width: 100%;
